Fix: pagination mobile responsive

--- a/resources/assets/admin/styles/_globals.scss
+++ b/resources/assets/admin/styles/_globals.scss
@@ -794,8 +794,9 @@ label.el-radio, label.el-checkbox {
   background: #fff;
   display: inline-flex;
   border-radius: $border-radius;
+  max-width: 100%;
   padding: 12px 20px;
-  box-shadow: 0px 1px 3px rgba(30, 31, 33, 0.08);
+  box-shadow: 0 1px 3px rgba(30, 31, 33, 0.08);
   font-weight: 500;
   .el-input__inner{
     background: #f2f2f2;
